fix: hide scrollbar on horizontal slider on desktop

--- a/gatsby-theme-portfolio-minimal/src/components/Slider/style.module.css
+++ b/gatsby-theme-portfolio-minimal/src/components/Slider/style.module.css
@@ -11,26 +11,3 @@
 .SlideContainer::-webkit-scrollbar {
     display: none;
 }
-
-/* Show scrollbar if desktop and wrapper width > viewport width */
-@media (hover: hover) {
-    .SlideContainer {
-        scrollbar-color: var(--scroll-bar-color); /* Firefox only */
-    }
-    .SlideContainer::-webkit-scrollbar {
-        display: block;
-        -webkit-appearance: none;
-    }
-    .SlideContainer::-webkit-scrollbar:horizontal {
-        height: 0.8rem;
-    }
-    .SlideContainer::-webkit-scrollbar-thumb {
-        border-radius: 8px;
-        border: 0.2rem solid var(--background-color);
-        background-color: var(--scroll-bar-color);
-    }
-    .SlideContainer::-webkit-scrollbar-track {
-        background-color: var(--background-color);
-        border-radius: 8px;
-    }
-}
